# rsshub-monitor

./: .gitignore  README.md  online_rss_endpoints.json  pyproject.toml
.github/workflows/: monthly-scan.yml
data/: categories.json  categories.schema.json  namespace.schema.json  online.json  servers.json  servers.schema.json
data/cache/categories/: anime.xml  bbs.xml  blog.xml  design.xml  finance.xml  forecast.xml  game.xml  government.xml  journal.xml  live.xml  multimedia.xml  new-media.xml  other.xml  picture.xml  popular.xml  program-update.xml  programming.xml  reading.xml  shopping.xml  social-media.xml  study.xml  traditional-media.xml  travel.xml  university.xml
data/categories/: anime.json  bbs.json  blog.json  design.json  finance.json  forecast.json  game.json  government.json  journal.json  live.json  multimedia.json  new-media.json  other.json  picture.json  popular.json  program-update.json  programming.json  reading.json  shopping.json  social-media.json  study.json  traditional-media.json  travel.json  university.json
data/categories/summary/: anime.json  bbs.json  blog.json  design.json  finance.json  forecast.json  game.json  government.json  journal.json  live.json  multimedia.json  new-media.json  other.json  picture.json  popular.json  program-update.json  programming.json  reading.json  shopping.json  social-media.json  study.json  traditional-media.json  travel.json  university.json
output/: 36kr_newsflashes.xml  online.bak.json  online.json
src/rsshub_monitor/: scan_namespace.py  scan_servers.py  split_by_category.py
