[tool.poetry]
name = "rsshub-monitor"
version = "0.1.0"
description = ""
authors = ["sean <sean.li@vectorindex.cloud>"]
readme = "README.md"
packages = [{include = "rsshub_monitor", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
